# solstyle-hack

./: .gitignore  README.md
app/: package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/components/: WalletContextProvider.tsx
app/utils/: idl.json
programs/solstyle_program/: Anchor.toml  Cargo.toml  package-lock.json
programs/solstyle_program/programs/solstyle_program/: Cargo.toml
programs/solstyle_program/programs/solstyle_program/src/: lib.rs
programs/solstyle_program/src/: lib.rs
programs/solstyle_program/tests/: solstyle_program.js
