[package]
name = "solstyle_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solstyle_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []

[dependencies]
# 1. Anchor 0.29.0
anchor-lang = "0.29.0"

# 2. Anchor SPL
anchor-spl = { version = "0.29.0", features = ["metadata", "associated_token"] }

# 3. Standard Libraries
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

# 4. SOLANA VERSION (The One That Works)
# We must use 1.18.17 to match spl-token-2022 v0.9.0 (which Anchor uses internally)
solana-program = "1.18.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true